# journeyai-backend

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Makefile  Procfile  README.md  deploy.sh  docker-compose.local.yaml  docker-compose.yaml  docker-compose.yml  logging.md  pyproject.toml  railway.json
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/clients/: arq_client.py  groq_client.py  openai_client.py  qdrant_client.py  redis_client.py
app/core/: __init__.py  assistants.py  config.py  security.py  starters.py
app/db/: init_db.py  init_mongo.py  init_qdrant.py  init_qdrant_db.py
app/models/: account.py  artifact.py  assistant.py  crm.py  message.py  opportunity.py  organization.py  session.py  user.py
app/schemas/: account.py  agent_context.py  artifact.py  assistant.py  message.py  profile.py  session.py  token.py  types.py  user.py
app/tasks/: artifact_tasks.py  conversation_tasks.py  notification_tasks.py  queues.py  redis_queue.py  worker.py
app/tools/internal/: save_artifact.py  search_artifacts.py  search_assistant_documents.py
app/tools/mcp_servers/: search1api.py
app/utils/: assistant_utils.py  constructor_utils.py  file_upload_utils.py  logging.py  loki_logger.py  misc_utils.py  openai_client.py  prompt_utils.py  qdrant_client.py  qdrant_utils.py  tool_utils.py
app/utils/websocket/: celery_comm.py  communications.py  handlers.py  redis_listener.py
app/workers/agents/: tasks.py  utils.py  worker.py
app/workers/artifacts/: tasks.py  worker.py
app/workers/messages/: tasks.py  worker.py
app/workers/sessions/: tasks.py  worker.py
assistants_docs/client_research_prep/: prompt.md
docs/: AUTO_TITLING.md  DEPLOYMENT.md  LOCAL_SETUP_MACOS.md  LOCAL_SETUP_WINDOWS.md  WEBSOCKETS.md
manual_scripts/: benchmark_db.py  seed_db.py  websocket_chat_cli.py  websocket_chat_cli_example.md
prompts/assistants/annual_report_summarizer/: Router.md  Task 0.md  Task 1.md  Task 2.md  Task 3.md  Task 4.md  master.md  metadata.json
prompts/assistants/lookalike_leads/: master.md  (+6 more)
prompts/internal/: context.md
(+66 files in other folders)
