[tool.poetry]
name = "journeyai"
version = "0.1.0"
description = ""
authors = ["Matt <philmattdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
openai = "^1.78.1"
redis = "^6.1.0"
celery = "^5.5.2"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
beanie = "^1.29.0"
openai-agents = "^0.0.14"
loguru = "^0.7.3"
python-jose = "^3.4.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-extra-types = "^2.10.4"
pydantic = {extras = ["email"], version = "^2.11.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["app"]
